add四则，remove supset subset

--- a/KOS/孵化器/定义/000点-创造.md
+++ b/KOS/孵化器/定义/000点-创造.md
@@ -1,7 +1,7 @@
 ## 创造
 
 ```rs
-#! (ink pub (T i) (attr (type Create) (p (list D R))))
+#! (ink pub (attr (type Create) (p {D R})))
 ```
 
 自然基础之上，通过人的创造实现。
@@ -36,7 +36,7 @@
 
 > 一种数据结构，对于页来说是一种声明，对于整体来说是一种有序的知识或数据体系。这种数据体系需要用一种配套的结构算法加以约束和管理。
 
-`(ink <权限> (<运算符> i) (attr (type <类型>) (p <优先级>)) (edge <边>))`
+`(ink <权限> (attr (type <类型>) (p <优先级>)) (edge <边>))`
 
 将计算机科学的变量的结构和数学中集合的定义放在一起，利用数学和计算机技术以及现代学科创建一个结构化工具。
 
@@ -44,39 +44,6 @@
 
 DiscreteNote文件夹，存放离散笔记。
 
-## 元素的语义操作：组合、分解、等价、换算。
-
-add 、minus、times、divide
-
-A M T D
-
-```clojure
-;括弧中第一个符号为运算符，后面是操作数。运算也可以嵌套，比如 
-
-(* (+ 2 3) 6) 
-
-;表示先计算2+3=5，然后再5*6=30。
-
-(+ 2 (* 3 4) (- 3 5)) = 12
-
-;表示先计算 3*4=12，3-5=-2，然后在计算 2+12-2=12。
-```
-
-Q：结果是什么？存放在哪里？而且和组合和分解重合了。分解和组合的结果是this元素。而这个，是对元素级别的复杂运算，其结果是一个新的主题。问题是出现在声明中是什么意义？
-1. 出现在声明中只能意味着，Topic主题经过一系列运算得到这个结果。
-2. 另一种可能是，只有过程，没有结果，仅仅对当前的元素进行操作，结果是需要现进行计算后得到的。
-3. 如果第一种的话，和边-组合分解有什么区别？我觉得边是表示元素之间的关系，而语义运算是得到结果。但需要注意的是边-组合分解得到的结果是this，而语义运算得到的结果也是this，会出现冲突，也许需要采取两种方案，即第一种方案边和语义运算互斥，只能选其一。第二种方案，定义运算优先级。
-4. 如果是第二种的话，则不需要考虑冲突，因为是根据结果在进行语义运算。只是结果是不保存，需要在用的时候运算一下。
-所以你会采用那种方案呢？
-
-this = meld (list AnyE1 AnyE2 AnyE2)
-自强不息 + 逆来顺受 = 能屈能伸。
-
-重大误解 = 错误判断 + （来源）自己形成的重大误解错误判断；
-
-欺诈 = 错误判断 + （来源）对方欺诈行为。
-
-推导过程和结果一样重要！
 
 ## 符号定义
 
