--- a/KOS/孵化器/定义/003索引集.md
+++ b/KOS/孵化器/定义/003索引集.md
@@ -1,4 +1,4 @@
-索引表是一个纯粹的入口列表(list of entry point)。登记表只是一系列入口的组成的列表，通往那些最大最重要的笔记集合的入口列表。在找到入口后，他就可以依靠前面提到的链接系统，在笔记中冲浪了。
+索引表是一个纯粹的入口列表{of entry point}。登记表只是一系列入口的组成的列表，通往那些最大最重要的笔记集合的入口列表。在找到入口后，他就可以依靠前面提到的链接系统，在笔记中冲浪了。
 
 
 如果你想完全复制卢曼卡片盒笔记系统的功能，你必须创建一个超文本，然后通过很少量的入口进入某个主题最核心的笔记，从这些笔记开始，你就可以跟随笔记的链接继续前进了。
