--- a/KOS/孵化器/定义/013类-映射.md
+++ b/KOS/孵化器/定义/013类-映射.md
@@ -5,7 +5,7 @@
 ## 实例（case）
 
 ```rs
-#! (ink pub (T i) (attr (type Mapping:Case) (p (list D R))))
+#! (ink pub (attr (type Mapping:Case) (p {D R})))
 ```
 
 - 实现：实例， `(type Case)` ，语义概念与实例的映射。语义概念的不断发展。
@@ -20,7 +20,7 @@
 <!-- 把时间当作朋友 -->
 
 ```rs
-#! (ink pub (T i) (attr (type Mapping:List) (p (list D R))))
+#! (ink pub (attr (type Mapping:List) (p {D R})))
 ```
 
 优先级列表、难度列表、时间列表。有序列表。角度也许是从这些有序或者无序集合中说的。
@@ -36,7 +36,7 @@ unique to-do list唯一代办优先级列表
 索引的两种形式 Graph、Moc：要有实际的图，可以看见的的图，也要有承载内容的点，以及点上的边。mermaid，graphviz
 
 ```rs
-#! (ink pub (T i) (attr (type Mapping:Graph) (p (list D R))))
+#! (ink pub (attr (type Mapping:Graph) (p {D R})))
 ```
 
 ```mermaid
@@ -66,7 +66,7 @@ style B fill:#F0FF;
 ## Moc
 
 ```rs
-#! (ink pub (T i) (attr (type Mapping:Moc) (p (list D R))))
+#! (ink pub (attr (type Mapping:Moc) (p {D R})))
 ```
 
 在 MOC（内容地图）中按邻近性进行组织。
