--- a/KOS/孵化器/定义/021边-约束.md
+++ b/KOS/孵化器/定义/021边-约束.md
@@ -2,7 +2,7 @@
 
 
 ```rs
-#! (ink pub (T i) (edge (throw supset(向上回溯，限定范围) subset(具体处理))))
+#! (ink pub (edge (throw supset(向上回溯，限定范围) subset(具体处理))))
 ```
 
 this throw [supset, subset]
