--- a/KOS/孵化器/定义/022边-引用.md
+++ b/KOS/孵化器/定义/022边-引用.md
@@ -2,7 +2,7 @@
 # 引用（refer）
 
 ```rs
-#! (ink pub (T i) (edge (cite (list B C))))
+#! (ink pub (edge (cite {B C})))
 ```
 
 关于元素中部分概念的引用，采用：`cite [Area]/[E].chunk`
