--- a/KOS/孵化器/定义/023边-时序.md
+++ b/KOS/孵化器/定义/023边-时序.md
@@ -2,7 +2,7 @@
 
 ## 元素历史
 ```rs
-#! (ink pub (T i) (edge (seq+hist>>(list E F))))
+#! (ink pub (edge (seq+hist>>{E F})))
 ```
 
 hist:英文全称 history
@@ -11,7 +11,7 @@ hist:英文全称 history
 ## 里程碑（生长路径-时序）
 
 ```rs
-#! (ink pub (T i) (edge (seq+time>>E)))
+#! (ink pub (edge (seq+time>>E)))
 ```
 
 一个元素的时间栈。类似GitHub的release和tag
