--- a/KOS/孵化器/定义/024边-同义.md
+++ b/KOS/孵化器/定义/024边-同义.md
@@ -5,11 +5,11 @@
 ==等效词汇==
 
 ```rs
-#! (ink pub (T i) (edge (as E)))
+#! (ink pub (edge (as E)))
 ```
 
 ```rs
-#! (ink pub (T i) (edge (as+alias {E, A})))
+#! (ink pub (edge (as+alias {E, A})))
 ```
 
 as：（用于比较）像…（一样），和…（一样）
