--- a/KOS/孵化器/定义/027边-组合.md
+++ b/KOS/孵化器/定义/027边-组合.md
@@ -1,10 +1,10 @@
 ## 组合（傅里叶变换、具象）
 
 ```rs
-#! (ink pub (T i) (edge (meld (list AnyE1 AnyE2 AnyE2))))
+#! (ink pub (edge (meld {AnyE1 AnyE2 AnyE2})))
 ```
 
-this = meld (list AnyE1 AnyE2 AnyE2)
+this = meld {AnyE1 AnyE2 AnyE2}
 
 
 Composition > Inheritance
