--- a/KOS/孵化器/定义/028边-分解.md
+++ b/KOS/孵化器/定义/028边-分解.md
@@ -3,7 +3,7 @@
 disintegrate -> disint.
 
 ```rs
-#! (ink pub (T i) (edge (disint (list A B))))
+#! (ink pub (edge (disint {A B})))
 ```
 
 表示当前元素被分解为元素A和元素B。
