--- a/KOS/孵化器/定义/029边-相关.md
+++ b/KOS/孵化器/定义/029边-相关.md
@@ -3,7 +3,7 @@
 近于近似相近（线索：近义词、反义词等等）
 
 ```rs
-#! (ink pub (T i) (edge (approx+weak (list B C))))
+#! (ink pub (edge (approx+weak {B C})))
 ```
 
 弱关系。双向（暂定）
@@ -13,12 +13,12 @@
 ## 近似 
 
 ```rs
-#! (ink pub (T i) (edge (approx (list B C))))
+#! (ink pub (edge (approx {B C})))
 ```
 
 this的近义词
 
-this -approx- (list B C)  
+this -approx- {B C}  
 
 
 ## 相反
@@ -26,6 +26,6 @@ this -approx- (list B C)
 opposite -> opp.
 
 ```rs
-#! (ink pub (T i) (edge (opp E)))
+#! (ink pub (edge (opp E)))
 ```
 
