--- a/KOS/孵化器/定义/050表达式.md
+++ b/KOS/孵化器/定义/050表达式.md
@@ -28,7 +28,7 @@
 - 公式：(ink pub (attr (type Case)) (edge (complex E))) ≠ (ink pub (attr (type Case)) (edge (supset E)))
 - 解释：元素组合后产生的实例 不等价于 元素继承后产生的实例，区别是有无创生。
 
-- 公式：(ink pub (attr (type Case) (p (list D R))) (edge (supset (list A B))))
+- 公式：(ink pub (attr (type Case) (p {D R})) (edge (supset {A B})))
 
 - 公式：(ink pub (edge (complex E)))
 - 解释：元素组合后产生的元素被标记为[特征元素]。
