--- a/KOS/孵化器/示例/元素集/1, 现代科学.md
+++ b/KOS/孵化器/示例/元素集/1, 现代科学.md
@@ -1,6 +1,6 @@
-#! (ink pub (attr (type Topic)) (edge (subset 形式科学 自然科学 社会科学)))
+#! (ink pub (attr (type Topic)))
 
-# 线代科学
+# 现代科学
 
 > 科学在现有基础上，摸索式地不断接近真理。故科学的发展史就是一部人类对宇宙的认识偏差的纠正史。
 
