--- a/KOS/孵化器/示例/元素集/1.2b 事物的多元要素.md
+++ b/KOS/孵化器/示例/元素集/1.2b 事物的多元要素.md
@@ -1,4 +1,4 @@
-#! (ink pub (attr (type Topic)) (edge (subset 意义) (unto 结构与功能 [[1.2 认知科学]])))
+#! (ink pub (attr (type Topic)) (edge (unto 结构与功能 [[1.2 认知科学]])))
 
 
 事物有特征，属性，关系，性质，分类，功能、意义、产生方式、历史背景、发展趋势、形式和结构，结构与功能，视角和主体性，用途与价值，界限和联系，环境和影响
