--- a/KOS/孵化器/定义/010类-集合.md
+++ b/KOS/孵化器/定义/010类-集合.md
@@ -1,7 +1,7 @@
 ## 集合
 
 ```rs
-#! (ink pub (T i) (attr (type Set) (p (list D R))))
+#! (ink pub (attr (type Set) (p {D R})))
 ```
 
 Collection 集合是由一系列元素构成的（ concepts, 或 tasks）。
