--- a/KOS/孵化器/设计/内容管理系统设计.md
+++ b/KOS/孵化器/设计/内容管理系统设计.md
@@ -98,3 +98,50 @@
 
 
 ![[Pasted image 20240702174809.png]]
+
+
+## 002TreeID（参考）
+
+为了使不断加入的卡片形成图谱结构和树结构便于快速检索，同时为了关于部分想法不用命名的便利性，特此建立唯一编码系统。
+
+此ID树是无关概念层级（分类）**想法（写作和思考）的生成树**。卡片盒笔记系统就是由想法组成的想法之网(web of thought)。
+
+> 用树写想法，这些想法被放在固定位置，有时候脑海中会闪现出树中某个节点，那么，你用链接把他们连接起来即可。
+
+根据ZK-2：
+
+1. 编码数字和字母交替出现。
+2. 若有斜杠，斜杠前是事前规划好的。斜杠后是事后生长出来的。
+3. ID后可以加上名字。
+4. 同一位置分支，由字母或数字表示。
+5. 节点之间根据编码确定的关系 和 节点的内容的概念层级，他俩是没有关系的。
+6. 卡片编码更多是表示虚拟物理地址，是位置关联和接近性。
+7. 可以有小括号(num)
+
+```
+0-n是序列，0-0a是分支。分支即可以做扩充笔记也可以做链路或者继续一个思路呀。序列同样可以哇。
+
+1 -> 1a -> 1a1
+纵深发展，分支递增。异层次增加。
+扩充笔记。
+
+1 -> 2 ; 1a -> 1b
+并行发展，序列递增。同层次增加。
+继续一个思路。
+
+1 -> 1(1)
+横向发展：重载递增。增加自身变体
+```
+
+树的生长{增加分支、增加层次深度}，树是由粗到细。
+
+
+## 003索引集（参考）
+
+索引表是一个纯粹的入口列表{of entry point}。登记表只是一系列入口的组成的列表，通往那些最大最重要的笔记集合的入口列表。在找到入口后，他就可以依靠前面提到的链接系统，在笔记中冲浪了。
+
+
+如果你想完全复制卢曼卡片盒笔记系统的功能，你必须创建一个超文本，然后通过很少量的入口进入某个主题最核心的笔记，从这些笔记开始，你就可以跟随笔记的链接继续前进了。
+
+
+索引可以使用首字母排序，或者人名排序。
