--- a/KMS/孵化器/内容管理系统设计.md
+++ b/KMS/孵化器/内容管理系统设计.md
@@ -15,11 +15,15 @@
 
 
 
-## ZK 嵌套列表内容树（卡片内容树）
+## ZK 嵌套列表（卡片内容树）
 
 嵌套列表结构。列表是开始，列表套列表。什么时候进入子列表呢？什么时候新建列表呢？
 
+确定最简方式是嵌套列表。由点构成列表，列表连接列表构成嵌套列表。
+
 关于内容树的设计是有关联即可，
+
+数据存储树需要分区存储。
 
 - ==1==, ==marked==
 	- 1,1
