--- a/KMS/孵化器/定义/061笔记的拓扑结构.md
+++ b/KMS/孵化器/定义/061笔记的拓扑结构.md
@@ -37,19 +37,34 @@ ZK 树的高度，若用文件名，最大为 205。留出 25 位作为文件名
 
 ### 表现形式
 
-- 缩进列表（word 大纲，目录）
-  - 文件内的内容标题大纲树
-- 标签树（Tags Tree）
-- 文件树（无文件夹的**文档树**，有文件夹的**目录树**）
-  - 块级列表树，卡片级列表树
-  - SuperMemo 内容树
-  - 有文件夹的目录树感觉就像用容器组成的树，格子里面放文件或子文件夹
-  - 目录树的组成为文件夹和文件两类
-    - 目录树可看做嵌套笔记集合树
-    - 每个文件夹都是一堆文件集合
-    - 每个文件都是一堆文字的集合
-    - 每个文件名都是集合的命名
+- 文件树：集合树、文档树、标签树
+  - 集合树
+    - 定义：由文件夹组成的目录树。
+    - 就像用格子组成的树，格子里面放文件或子文件夹
+    - 目录树的组成：文件夹和文件
+      - 目录树可看做嵌套笔记集合树
+      - 每个文件夹都是一堆文件集合
+      - 每个文件都是一堆文字的集合
+      - 每个文件名都是集合的命名
+  - 文档树
+    - 定义：只有文档，没有文件夹的树形文件组织。
+  - 标签树（Tags Tree）
+    - 在tiddlywiki中，通过标签构成的文件树也是非常不错的选择。
+  - 联想
+    - SuperMemo 内容树
+    - SuperMemo 神经树。
+    - 卡片级列表树
+    - 块级列表树
+    - 缩进列表（word 大纲，目录）
+      - 文件内的内容标题大纲树
+    - 幕布子节点
 - ZK2 的编码想法生成树（序列分支树）
+- RoadMap路线图
+- 决策树/逻辑树（Decision tree/Logic tree）
+  - 条件推理树
+  - 数学的分步乘法原理
+- 任务目标和问题拆分树
+  - 比如论文的一个大问题的拆分为各个子问题。
 - 分类树
   - 生物分类学
 - 模块树（Package）
@@ -57,23 +72,14 @@ ZK 树的高度，若用文件名，最大为 205。留出 25 位作为文件名
   - 叶节点（底层）最基础、最通用的功能模块。根结点（顶层）通常是用户直接交互的部分。
   - 在模块树的设计中，通常会从底层开始构建，逐步向上封装，直到顶层。每一层的模块都应该只依赖于它的直接下层，而不应该跨层依赖。这样做的好处是，你可以更容易地替换和更新某一层，而不会影响到其他层。
 - DOM 文档树
-- SuperMemo 神经树。
-- Decision tree/Logic tree(决策树/逻辑树)
-  - 条件推理树
-  - 数学的分步乘法原理
-- 任务目标和问题拆分树
-  - 比如论文的一个大问题的拆分为各个子问题。
 - AST 抽象语法树
   - 实用主义，线性语言表达的树状重要性结构
-- treesheets
-- 路线图
 - 英语的语法框架（英语句子=主干+修饰成分）
 - 思维导图（基于树结构，可以包含交叉连接和反馈循环）
-- 表格嵌套
+- treesheets、表格嵌套
 - 星系
 - 行政地图
 - 赫夫曼树
-- 幕布子节点
 
 ### 不同用法
 
