--- a/KMS/孵化器/定义/000点-创造.md
+++ b/KMS/孵化器/定义/000点-创造.md
@@ -1,7 +1,13 @@
 ## 创造
 
 ```rs
-#! (ink pub (attr (type Create) (p {D R})))
+#! (ink pub (attr (type Create) (p [D R])))
+```
+
+```yaml
+ink.acc: pub
+ink.attr.type: Create
+ink.attr.p: [D, R]
 ```
 
 自然基础之上，通过人的创造实现。
@@ -44,34 +50,6 @@
 
 DiscreteNote文件夹，存放离散笔记。
 
-
-## 符号定义
-
-
-### 点-关键字
-
-1. `ink` 表示墨水、墨汁、油墨、颜料
-2. `<pub><mut>`，权限：公开、可选。
-
-
-### 边-关键字
-
-1. `cite` 代指引用其它元素，引用关系。程序设计中通常会导入程序库来实现某些功能。C/C++语言中使用include导入其它文件以扩展当前文件，分而治之。被引用文件往往和当前文件无任何继承关系。元素和元素之间会相互勾连的，在文学做品里面会用典说明。用典、意象也属于一种引用。特殊：出现在文章中的wiki链接引用。
-2. `as` 代指多型的特征元素，矩阵的归一化。
-3. `supset` 代指超集。
-4. `subset` 代指子集。
-5. `complex` 代指组合、复杂度，组合多个元素形成新的元素。
-6. `abstract` 代指从多个元素中抽象出一个元素(this=当前元素)作为多个元素的超集。
-7. `throw` 代指超元素限定范围，子元素实际处理。
-
-
-## 多态
-
-> 类型+行为，多态性没办法直接实现。点表示数据与类型，边表示动作与联系。这里不需要有方法或函数。知识结构的行为本质上是对某个元素进行操作然后产生新的元素。定义类型（点：元素等等）、定义行为（边：继承、抽象等等）。
-
-特征：不同类型（点）的相同行为（各种边的定义）；泛型：类型（点）各异但泛化为一个的类型（点），即类型的类型容器。是广义的代表某种类型。在输入数据时被确认。
-
-泛型也可以作为一种参数用在边动作中。或者任意需要它的地方。作为()内的多类型参数容器使用。
 
 
 ## 知识地图
