--- a/KMS/孵化器/定义/001列表树.md
+++ b/KMS/孵化器/定义/001列表树.md
@@ -1,4 +1,4 @@
-# 层集
+# 嵌套集合树
 
 ## 标题：水（元素 - 层集 - 路径）
 
@@ -12,3 +12,7 @@
 - 可以暂时使用文件树取代这个，方便使用。
 
 内容树作为唯一主键承载更多形式的东西，在使用上方便，在存储上合理且高效。是目前作为数据存储的最优选择。树结构，比如星系、邮寄地址，行政分区。
+
+继承，只确定从属关系。
+
+# 层次树（祖先树）Hierarchy
