--- a/KMS/孵化器/定义/010类-集合.md
+++ b/KMS/孵化器/定义/010类-集合.md
@@ -1,7 +1,14 @@
+
 ## 集合
 
 ```rs
-#! (ink pub (attr (type Set) (p {D R})))
+#! (ink pub (attr (type Set) (p [D R])))
+```
+
+```yaml
+ink.acc: pub
+ink.attr.type: Set
+ink.attr.p: [D, R]
 ```
 
 Collection 集合是由一系列元素构成的（ concepts, 或 tasks）。
