--- a/KMS/孵化器/定义/011类-概念.md
+++ b/KMS/孵化器/定义/011类-概念.md
@@ -1,5 +1,11 @@
 # Concept 概念
 
 ```rs
-#! (ink pub (attr (type Concept) (p {D R})))
+#! (ink pub (attr (type Concept) (p [D R])))
+```
+
+```yaml
+ink.acc: pub
+ink.attr.type: Concept
+ink.attr.p: [D, R]
 ```
