--- a/KMS/孵化器/定义/012类-主题.md
+++ b/KMS/孵化器/定义/012类-主题.md
@@ -1,10 +1,14 @@
 # 主题
 
 ```rs
-#! (ink pub (attr (type Topic) (p {D R})))
+#! (ink pub (attr (type Topic) (p [D R])))
 ```
 
-
+```yaml
+ink.acc: pub
+ink.attr.type: Topic
+ink.attr.p: [D, R]
+```
 ## 元素的合并
 
 
