--- a/KMS/孵化器/定义/013类-映射.md
+++ b/KMS/孵化器/定义/013类-映射.md
@@ -5,7 +5,13 @@
 ## 实例（case）
 
 ```rs
-#! (ink pub (attr (type Mapping:Case) (p {D R})))
+#! (ink pub (attr (type Mapping:Case) (p [D R])))
+```
+
+```yaml
+ink.acc: pub
+ink.attr.type: Mapping:Case
+ink.attr.p: [D, R]
 ```
 
 - 实现：实例， `(type Case)` ，语义概念与实例的映射。语义概念的不断发展。
@@ -23,6 +29,11 @@
 #! (ink pub (attr (type Mapping:List) (p {D R})))
 ```
 
+```yaml
+ink.acc: pub
+ink.attr.type: Mapping:List
+ink.attr.p: [D, R]
+```
 优先级列表、难度列表、时间列表。有序列表。角度也许是从这些有序或者无序集合中说的。
 
 任务清单、项目清单
@@ -36,7 +47,13 @@ unique to-do list唯一代办优先级列表
 索引的两种形式 Graph、Moc：要有实际的图，可以看见的的图，也要有承载内容的点，以及点上的边。mermaid，graphviz
 
 ```rs
-#! (ink pub (attr (type Mapping:Graph) (p {D R})))
+#! (ink pub (attr (type Mapping:Graph) (p [D R])))
+```
+
+```yaml
+ink.acc: pub
+ink.attr.type: Mapping:Graph
+ink.attr.p: [D, R]
 ```
 
 ```mermaid
@@ -67,6 +84,12 @@ style B fill:#F0FF;
 
 ```rs
 #! (ink pub (attr (type Mapping:Moc) (p {D R})))
+```
+
+```yaml
+ink.acc: pub
+ink.attr.type: Mapping:Moc
+ink.attr.p: [D, R]
 ```
 
 在 MOC（内容地图）中按邻近性进行组织。
