--- a/KMS/孵化器/定义/015类-任务.md
+++ b/KMS/孵化器/定义/015类-任务.md
@@ -1,5 +1,11 @@
 ## 任务
 
 ```rs
-#! (ink pub (attr (type Task) (p {D R})))
+#! (ink pub (attr (type Task) (p [D R])))
+```
+
+```yaml
+ink.acc: pub
+ink.attr.type: Task
+ink.attr.p: [D, R]
 ```
