--- a/KMS/孵化器/定义/020边-归于.md
+++ b/KMS/孵化器/定义/020边-归于.md
@@ -1,7 +1,12 @@
 # 归于
 
 ```rs
-#! (ink pub (edge (unto {E F})))
+#! (ink pub (edge (unto [E F])))
+```
+
+```yaml
+ink.acc: pub
+ink.edge.unto: [E, F]
 ```
 
 专门解决组合来源问题、多继承问题。
@@ -15,6 +20,6 @@
 
 “菱形”问题——路径二义性
 
->> 单继承会比多继承更有优势，使用单继承时，多继承的特点可以由其他关系实现，比如多态。
+> 单继承会比多继承更有优势，使用单继承时，多继承的特点可以由其他关系实现，比如多态。
 
 先自立，在多样。
