--- a/KMS/孵化器/定义/021边-约束.md
+++ b/KMS/孵化器/定义/021边-约束.md
@@ -1,8 +1,15 @@
 # 约束
 
-
 ```rs
-#! (ink pub (edge (throw supset(向上回溯，限定范围) subset(具体处理))))
+#! (ink pub (edge (const supset(向上回溯，限定范围) subset(具体处理))))
+```
+
+```yaml
+ink.acc: pub
+ink.edge.const: [supset, subset]
 ```
 
 this throw [supset, subset]
+
+Supset (向上回溯，限定范围)
+Subset (具体处理)
