--- a/KMS/孵化器/定义/022边-引用.md
+++ b/KMS/孵化器/定义/022边-引用.md
@@ -2,7 +2,12 @@
 # 引用（refer）
 
 ```rs
-#! (ink pub (edge (cite {B C})))
+#! (ink pub (edge (cite [E F])))
+```
+
+```yaml
+ink.acc: pub
+ink.edge.cite: [E, F]
 ```
 
 关于元素中部分概念的引用，采用：`cite [Area]/[E].chunk`
