--- a/KMS/孵化器/定义/023边-时序.md
+++ b/KMS/孵化器/定义/023边-时序.md
@@ -1,17 +1,32 @@
 # 序列（sequence）
+在历史线性中，我能在某个时点元素标记的仅有：过去和现在。
 
-## 元素历史
+
+## 元素历史（标记过去）
 ```rs
-#! (ink pub (edge (seq+hist>>{E F})))
+#! (ink pub (edge (seq+hist>>[E F])))
+```
+
+```yaml
+ink.acc: pub
+ink.edge.seq+hist: [E, F]
 ```
 
 hist:英文全称 history
 
+不过，标记元素的修改历史感觉没有任何意义。我应该赋予过去新的意义。
 
-## 里程碑（生长路径-时序）
+过去是指，旧名字？
+
+## 里程碑（标记现在）（生长路径-时序）
 
 ```rs
 #! (ink pub (edge (seq+time>>E)))
+```
+
+```yaml
+ink.acc: pub
+ink.edge.seq+time: version
 ```
 
 一个元素的时间栈。类似GitHub的release和tag
@@ -19,7 +34,5 @@ hist:英文全称 history
 链表式结构，当前标注下一个元素。
 
 发展（衍生，生长路径）生长路径，两个相互独立，但有明显逻辑时间先后关系的元素。
-
-继承，只确定从属关系。
 
 生长路径只确定一个路径。多路径标记。
