--- a/KMS/孵化器/定义/024边-同义.md
+++ b/KMS/孵化器/定义/024边-同义.md
@@ -1,3 +1,4 @@
+
 # 同义 OR 别名
 
 ○ 形象，象征体系|元素
@@ -9,7 +10,17 @@
 ```
 
 ```rs
-#! (ink pub (edge (as+alias {E, A})))
+#! (ink pub (edge (as+alias [E F])))
+```
+
+```yaml
+ink.acc: pub
+ink.edge.as: E
+```
+
+```yaml
+ink.acc: pub
+ink.edge.as+alias: [E, F]
 ```
 
 as：（用于比较）像…（一样），和…（一样）
