--- a/KMS/孵化器/定义/025边-抽象.md
+++ b/KMS/孵化器/定义/025边-抽象.md
@@ -1,6 +1,10 @@
 # 抽象
 
 ```rs
-#! (ink pub (edge (abstract {B C D})))
+#! (ink pub (edge (abstract [E F])))
 ```
 
+```yaml
+ink.acc: pub
+ink.edge.sa.abstract: [E, F]
+```
