--- a/KMS/孵化器/定义/026边-实现.md
+++ b/KMS/孵化器/定义/026边-实现.md
@@ -1,6 +1,11 @@
 
 ```rs
-#! (ink pub (edge (impl {B C D})))
+#! (ink pub (edge (impl [E F])))
+```
+
+```yaml
+ink.acc: pub
+ink.edge.sa.impl: [E, F]
 ```
 
 单个类型可以是复合类型、某种抽象的实现后元素。导数的逆过程？
