--- a/KMS/孵化器/定义/027边-组合.md
+++ b/KMS/孵化器/定义/027边-组合.md
@@ -1,7 +1,12 @@
 ## 组合（傅里叶变换、具象）
 
 ```rs
-#! (ink pub (edge (meld {AnyE1 AnyE2 AnyE2})))
+#! (ink pub (edge (meld [E F G])))
+```
+
+```yaml
+ink.acc: pub
+ink.edge.sa.meld: [E, F, G]
 ```
 
 this = meld {AnyE1 AnyE2 AnyE2}
