--- a/KMS/孵化器/定义/028边-分解.md
+++ b/KMS/孵化器/定义/028边-分解.md
@@ -3,7 +3,14 @@
 disintegrate -> disint.
 
 ```rs
-#! (ink pub (edge (disint {A B})))
+#! (ink pub (edge (disint [E F])))
+```
+
+```yaml
+ink.acc: pub
+ink.edge.sa.disint: [E, F]
 ```
 
 表示当前元素被分解为元素A和元素B。
+
+声音的合成和分解过程，即正弦函数的分解和合成过程。
