--- a/KMS/孵化器/定义/029边-相关.md
+++ b/KMS/孵化器/定义/029边-相关.md
@@ -3,17 +3,33 @@
 近于近似相近（线索：近义词、反义词等等）
 
 ```rs
-#! (ink pub (edge (approx+weak {B C})))
+#! (ink pub (edge (approx+weak [E F])))
+```
+
+```yaml
+ink.acc: pub
+ink.edge.sa.rel+weak: [E, F]
 ```
 
 弱关系。双向（暂定）
 
+"Related" 的缩写可以是 "rel."，而 "Relevant" 的缩写可以是 "relv." 或 "rel."。
+
+- rel. (for related)
+- relv. (for relevant)
+
+请注意，缩写的使用应该保持一致，并且在首次使用时给出全称，除非该缩写是广泛认可的。
 
 
 ## 近似 
 
 ```rs
-#! (ink pub (edge (approx {B C})))
+#! (ink pub (edge (approx [E F])))
+```
+
+```yaml
+ink.acc: pub
+ink.edge.sa.rel+approx: [E, F]
 ```
 
 this的近义词
@@ -29,3 +45,7 @@ opposite -> opp.
 #! (ink pub (edge (opp E)))
 ```
 
+```yaml
+ink.acc: pub
+ink.edge.sa.rel+opp: E
+```
