--- a/KMS/孵化器/定义/030边-四则.md
+++ b/KMS/孵化器/定义/030边-四则.md
@@ -3,6 +3,14 @@
 ```rs
 #! (ink pub (attr (type Create) (edge (T {i}))))
 ```
+
+```yaml
+ink.acc: pub
+ink.edge.sa.calc: T[i j]
+```
+
+Semantic Analysis 语义分析
+
 A M T D
 
 add 、minus、times、divide
