--- a/KMS/孵化器/定义/051泛型.md
+++ b/KMS/孵化器/定义/051泛型.md
@@ -1,12 +1,15 @@
 ## 泛型
 
-泛型：点的点类型容器。这个点本质和别的点一样，事物本身不变，但形式表现的多样性。从属映射的一对多或多对一关系。限定类别下，具有典型或代表性的元素。
+指传入参数可以是任何指定的类型。意味着类，方法，有了可以处理任意具体类型数据的能力。某种行为处理数据的不指定的泛化意义。泛型方法，是在调用方法的时候指明泛型的具体类型。处理者是行为执行者是作者，所以不需要泛型。
 
-点，变量。
+泛型：点的点类型容器。这个点本质和别的点一样，事物本身不变，但形式表现的多样性。从属映射的一对多或多对一关系。限定类别下，具有典型或代表性的元素。
 
 ~~多态， `?this as [[特征元素]]` 究竟代表什么意思？~~
 
 附加信息：言外之意、注释、元素的类似元信息、阳的对立统一的阴？
+
+言外之意是一种意思表示的不同表现形式，属于多词一义。元信息，注释的属于解释补充，属于笔记数据本体。阳对立统一的阴是属于事物的部分方面的补全。
+
 
 ```rs
 def::pub type:? this p=[D, R] ?:{[...]}
@@ -19,6 +22,36 @@ def::pub type:? this(水) p=[D, R] ?:{[各种温度下的水态]}
 def::pub type:? this(同一物质) p=[D, R] ?:{[不同环境下的形态结构功能]}
 ```
 
+
+## 实现（赋予含义）
+
+同一个事物的不同表现（不同环境下某事物的形态结构功能的变化，比如金属随温度的变化导致的性质变化。），或者表达表述（道在仁者表达为仁，道在智者表达为智）？实现和抽象指概念上的具象和抽象。
+
+事物的整体和部分缺失这个，可以考虑补全这个。
+
+Wikipedia 的重定向功能本质上是一种特殊的页面管理机制，其主要目的是为了确保用户在访问具有多个名称或变体的相同主题时，能够被引导至正确的、统一的条目页面。
+
+重定向功能可以创建一个重定向类型，用于包含多个名词或变体的相同主题。
+
+综合考虑事物的总，分，变，化，我认为方程更适合，比如数理化方程式。
+
+一义多词，这个功能是就是别名功能。
+
+
 达成目的不同路径？一个通用的可容纳多样性变量的泛型函数动作。虽然可以考虑抽象同一，但也要考虑具体不同于多样性。
 
-或者表现多样性，泛化为同一个事物本身。对于同一个事物的不同表述。泛型方法，是在调用方法的时候指明泛型的具体类型 。
+## 多态
+
+> 类型+行为，多态性没办法直接实现。点表示数据与类型，边表示动作与联系。这里不需要有方法或函数。知识结构的行为本质上是对某个元素进行操作然后产生新的元素。定义类型（点：元素等等）、定义行为（边：继承、抽象等等）。
+
+特征：不同类型（点）的相同行为（各种边的定义）；泛型：类型（点）各异但泛化为一个的类型（点），即类型的类型容器。是广义的代表某种类型。在输入数据时被确认。
+
+泛型也可以作为一种参数用在边动作中。或者任意需要它的地方。作为()内的多类型参数容器使用。
+
+## 053 归一化
+典型：形容一个事物具有代表性
+
+特征：作为一事物异于他事物的特点的。
+知识命名统一标准化，让同一个东西用通用词汇表达。即专业名词。
+
+物理 5σ（5 个标准误差）
