--- a/KMS/孵化器/定义/014类-术语.md
+++ b/KMS/孵化器/定义/014类-术语.md
@@ -1,7 +1,13 @@
 # 术语
 
 ```rs
-#! (ink pub (attr (type Term+[areas]) (p {D R})))
+#! (ink pub (attr (type Term+[areas]) (p [D R])))
+```
+
+```yaml
+ink.acc: pub
+ink.attr.type: Term+[areas]
+ink.attr.p: [D, R]
 ```
 
 术语使得概念变得简单而不混淆，通用。指定语词的哪一个具体含义。如果对某个词赋予太多意义就很容易使沟通变得困难且难以理解
