--- a/KMS/孵化器/定义/010类-集合.md
+++ b/KMS/孵化器/定义/010类-集合.md
@@ -7,8 +7,8 @@
 
 ```yaml
 ink.acc: pub
-ink.attr.type: Set
-ink.attr.p: [D, R]
+ink.type: set
+ink.p: [D, R]
 ```
 
 Collection 集合是由一系列元素构成的（ concepts, 或 tasks）。
