--- a/KMS/孵化器/定义/013类-映射.md
+++ b/KMS/孵化器/定义/013类-映射.md
@@ -10,8 +10,8 @@
 
 ```yaml
 ink.acc: pub
-ink.attr.type: Mapping:Case
-ink.attr.p: [D, R]
+ink.type: Mapping:Case
+ink.p: [D, R]
 ```
 
 - 实现：实例， `(type Case)` ，语义概念与实例的映射。语义概念的不断发展。
@@ -41,6 +41,15 @@ ink.attr.p: [D, R]
 项目、领域
 
 unique to-do list唯一代办优先级列表
+
+## 重定向
+```yaml
+ink.acc: pub
+ink.attr.type: Mapping:Redirect
+ink.attr.p: [D, R]
+```
+
+Wikipedia 的重定向功能本质上是一种特殊的页面管理机制，其主要目的是为了确保用户在访问具有多个名称或变体的相同主题时，能够被引导至正确的、统一的条目页面。
 
 ## Graph
 
