--- a/KMS/孵化器/示例/存储/B842.1 认知/感觉.md
+++ b/KMS/孵化器/示例/存储/B842.1 认知/感觉.md
@@ -1,4 +1,11 @@
-#! (ink pub (attr (type Topic)) (edge (unto [[认知科学]])))
+---
+ink.acc: pub
+ink.type: Topic
+ink.store: B842.1 认知
+ink.edge.unto:
+  - "[[认知科学]]"
+---
+
 
 # 感觉
 
