--- a/KMS/孵化器/示例/存储/B842.1 认知/认知科学.md
+++ b/KMS/孵化器/示例/存储/B842.1 认知/认知科学.md
@@ -1,3 +1,9 @@
-#! (ink pub (attr (type Concept)))
+---
+ink.acc: pub
+ink.type: Concept
+ink.store: B842.1 认知
+ink.edge.unto:
+  - "[[认知科学]]"
+---
 
 # 认知科学
