--- a/KMS/孵化器/示例/存储/O1 数学/概念渐构.md
+++ b/KMS/孵化器/示例/存储/O1 数学/概念渐构.md
@@ -1,4 +1,9 @@
-#! (ink pub (attr (type List) (p curr)))
+---
+ink.acc: pub
+ink.type: List
+ink.store: O1 数学
+ink.p: curr
+---
 
 - Purpe kernel（完整的、刚刚出生就有的、纯净的、它是每一个有生命的美好共有的）
 - 我与他（实体与实体）-红色精神
