--- a/KMS/孵化器/示例/存储/O433 光谱学/光谱学.md
+++ b/KMS/孵化器/示例/存储/O433 光谱学/光谱学.md
@@ -1,3 +1,12 @@
-#! (ink pub (attr (type Concept)) (edge (unto 物理 化学)))
+---
+ink.acc: pub
+ink.type: Concept
+ink.store: O443 光谱学
+ink.edge.unto:
+  - 物理
+  - 化学
+---
+
+
 
 # 光谱学/分光学 Spectroscopy
