--- a/KMS/孵化器/定义/004系统架构.md
+++ b/KMS/孵化器/定义/004系统架构.md
@@ -1,4 +1,4 @@
-# 页面与描述
+# 页面 page与描述ink
 
 每个笔记，都可以在系统角度分成本体和描述两大类型数据。就像语言实体和语言指向性一样
 
@@ -6,46 +6,12 @@
 
 一个类型对应多个边的方式。
 
-- Sys
-	- Ink
-		- Acc
-			- Pub
-			- Mut
-		- Attr
-			- Point[Any, Create]
-				- Set
-					- Concept
-					- Mapping
-						- Case
-						- List
-						- Moc
-						- Graph
-					- Term+[areas]
-					- Task
-			- Store
-			- Priority
-			- Weight
-		- Edge
-			- Unto
-			- Const
-			- Cite
-			- Seq
-				- Time
-				- Hist
-			- As
-				- As
-				- Alias
-			- Abstract
-			- Impl
-			- Meld
-			- Disint
-			- Rel
-				- Weak
-				- Approx
-				- Opp
-			- Calc
-	- Page
-		- Comment
+~关系：{归于-约束}、{引用-时序-同义}、{抽象-实现，组合-分解}、{相关：近似+相反}
+
+~类型：{集合、概念、主题}、实例、列表、任务、术语
+
+~一词多义和一义多词：{术语、同义+别名}
+
 
 ## 从点到图
 
@@ -100,3 +66,32 @@
 6. `abstract` 代指从多个元素中抽象出一个元素(this=当前元素)作为多个元素的超集。
 7. `throw` 代指超元素限定范围，子元素实际处理。
 
+
+## 笔记的系统设计
+
+主要结构：想法生成树为主，隐含层次结构树。主树每个元素节点都含有类型和边类型以及属性等。主树旁边还有索引表集合。
+
+想法（写作和思考）的生成树、概念层次结构树、节点之间的相互关系、节点的类型定义、关于节点自己、节点组合产生的系统效果。
+
+- 主字段 > ZK 想法生成树
+- 概念层次树
+- 连续与离散元素集合
+- 元素的类型
+- 元素的边的类型
+- 元素的优先级
+
+## 笔记的展开和可视范围
+
+注意力或者工作记忆类比显微镜即可。
+
+> 类似树结构的层层递进，“可视面积”保持不变，在面积中存在树结构的任意节点。
+>
+> 对于集合中的元素来说，是否要展开扩充，使元素展开面积沾满可视面积成为新的集合。
+
+注意力或者工作记忆始终有一个极限范围，lim(N) = 7，所以需要从初始范围例如 7 开始，不断在 lim(N)的范围下不断展开，深化。
+
+在容纳范围不变的情况下，开始深入，完成的单元放出范围，新的单元进入范围。
+
+这就像编程中的函数列表与函数体两个层次，深度和同级两种方式。
+
+在显示面积保持不变的情况下，就像显微镜一样，想要写的更精细的话就得放大显示倍数。这样显示倍数的增大减小。
