--- a/KMS/孵化器/定义/030边-算式.md
+++ b/KMS/孵化器/定义/030边-算式.md
@@ -1,3 +1,6 @@
+
+数学表达式
+
 ## 元素的语义操作：组合、分解、等价、换算。
 
 ```rs
@@ -6,8 +9,15 @@
 
 ```yaml
 ink.acc: pub
-ink.edge.sa.calc: T[i j]
+ink.edge.sa.expr: T[i j]
 ```
+
+类似数理化方程式，表述事物的总分变化。
+
+本页面，肯定是方程的一部分啦。
+
+直接写方程式好了。
+
 
 Semantic Analysis 语义分析
 
