--- a/KMS/孵化器/定义/004系统架构.md
+++ b/KMS/孵化器/定义/004系统架构.md
@@ -10,8 +10,9 @@
 
 ~类型：{集合、概念、主题}、实例、列表、任务、术语
 
-~一词多义和一义多词：{术语、同义+别名}
+~一词多义和一义多词：{术语、别名}
 
+○ 形象，象征体系|元素
 
 ## 从点到图
 
@@ -95,3 +96,15 @@
 这就像编程中的函数列表与函数体两个层次，深度和同级两种方式。
 
 在显示面积保持不变的情况下，就像显微镜一样，想要写的更精细的话就得放大显示倍数。这样显示倍数的增大减小。
+
+## 多型或多态性
+
+多型或多态性可以是下列意思：
+
+- 多型 (生物学)（polymorphism）：一个物种的同一种群中存在两种或多种明显不同的表型
+- 多态 (计算机科学)（polymorphism）：多态是同一个行为具有多个不同表现形式或形态的能力。多态就是同一个接口，使用不同的实例而执行不同操作。
+- 多型 (结晶学)（polytypism）：一种元素或化合物以两种或两种以上层状结构存在的现象。
+
+化学分子式中：
+- 同素异形体：是相同元素组成,不同形态的单质.如碳元素就有金钢石、石墨、无定形碳等同素异形体.同素异形体由于结构不同,彼此间物理性质有差异
+- 同分异构体：在有机化学中，将分子式相同、结构不同的化合物互称同分异构体，也称为结构异构体。将具有相同分子式而具有不同结构的现象称为同分异构现象。
