--- a/KMS/孵化器/定义/029边-相关.md
+++ b/KMS/孵化器/定义/029边-相关.md
@@ -1,17 +1,6 @@
 # 相关
 
-近于近似相近（线索：近义词、反义词等等）
-
-```rs
-#! (ink pub (edge (approx+weak [E F])))
-```
-
-```yaml
-ink.acc: pub
-ink.edge.sa.rel+weak: [E, F]
-```
-
-弱关系。双向（暂定）
+线索：近义词、反义词等等
 
 "Related" 的缩写可以是 "rel."，而 "Relevant" 的缩写可以是 "relv." 或 "rel."。
 
@@ -19,6 +8,34 @@ ink.edge.sa.rel+weak: [E, F]
 - relv. (for relevant)
 
 请注意，缩写的使用应该保持一致，并且在首次使用时给出全称，除非该缩写是广泛认可的。
+
+## 联想
+
+```yaml
+ink.acc: pub
+ink.edge.sa.rel+assoc: [E, F]
+```
+
+联想猜想。双向（暂定）
+
+## 等效
+
+```rs
+#! (ink pub (edge (as E)))
+```
+
+```yaml
+ink.acc: pub
+ink.edge.as: E
+```
+
+==等效词汇==
+
+as：（用于比较）像…（一样），和…（一样）
+
+去重、矩阵的归一化
+
+隐式的同义，其它元素指定它是同义它就是其它元素的同义。
 
 
 ## 近似 
@@ -49,3 +66,49 @@ opposite -> opp.
 ink.acc: pub
 ink.edge.sa.rel+opp: E
 ```
+
+
+"相关"这个词可以指多种不同类型的关系或联系。以下是一些常见的相关类别：
+
+1. **因果关系（Causal Relationship）**：
+   - 直接原因：一个事件直接导致另一个事件发生。
+   - 间接原因：一个事件通过一系列其他事件导致另一个事件发生。
+
+2. **时间关系（Temporal Relationship）**：
+   - 先后关系：一个事件发生在另一个事件之前或之后。
+   - 同时关系：两个事件同时发生。
+
+3. **空间关系（Spatial Relationship）**：
+   - 邻近：两个物体或事件在空间上靠近。
+   - 远离：两个物体或事件在空间上相隔较远。
+
+4. **相似性关系（Similarity Relationship）**：
+   - 形状相似：两个物体的形状相似。
+   - 特性相似：两个事件或物体在某些特性上相似。
+
+5. **对比关系（Contrast Relationship）**：
+   - 对立：两个事件或物体在某个特性上完全相反。
+   - 比较：通过比较来突出两个事件或物体的不同之处。
+
+6. **逻辑关系（Logical Relationship）**：
+   - 条件关系：如果...那么...的关系。
+   - 因果逻辑：基于逻辑推理的因果关系。
+
+7. **功能关系（Functional Relationship）**：
+   - 部分与整体：一个部分与整体的功能关系。
+   - 输入与输出：系统或过程的输入与输出之间的关系。
+
+8. **语义关系（Semantic Relationship）**：
+   - 同义：两个词语意义相同或非常接近。
+   - 反义：两个词语意义相反。
+   - 上位/下位：一个词语是另一个词语的泛称（上位词）或特称（下位词）。
+
+9. **情感关系（Emotional Relationship）**：
+   - 吸引：人们对某些事件、物体或人有积极的情感反应。
+   - 反感：人们对某些事件、物体或人有消极的情感反应。
+
+10. **社会关系（Social Relationship）**：
+    - 亲属关系：基于血缘或婚姻的社会联系。
+    - 朋友关系：基于共同兴趣或经历的社会联系。
+
+这些类别可以应用于不同的学科和领域，如自然科学、社会科学、人文学科等。
