--- a/KMS/孵化器/定义/030边-算式.md
+++ b/KMS/孵化器/定义/030边-算式.md
@@ -25,6 +25,27 @@ A M T D
 
 add 、minus、times、divide
 
+
+## 等效
+
+```rs
+#! (ink pub (edge (as E)))
+```
+
+```yaml
+ink.acc: pub
+ink.edge.sa.expr: E
+```
+
+==等效词汇==
+
+as：（用于比较）像…（一样），和…（一样）
+
+去重、矩阵的归一化
+
+隐式的同义，其它元素指定它是同义它就是其它元素的同义。
+
+
 ```clojure
 ;括弧中第一个符号为运算符，后面是操作数。运算也可以嵌套，比如 
 
