--- a/KMS/孵化器/定义/013类-映射.md
+++ b/KMS/孵化器/定义/013类-映射.md
@@ -5,12 +5,12 @@
 ## 实例（case）
 
 ```rs
-#! (ink pub (attr (type Mapping:Case) (p [D R])))
+#! (ink pub (attr (type Map+Case) (p [D R])))
 ```
 
 ```yaml
 ink.acc: pub
-ink.type: Mapping:Case
+ink.type: Map+Case
 ink.p: [D, R]
 ```
 
@@ -26,12 +26,12 @@ ink.p: [D, R]
 <!-- 把时间当作朋友 -->
 
 ```rs
-#! (ink pub (attr (type Mapping:List) (p {D R})))
+#! (ink pub (attr (type Map+List) (p {D R})))
 ```
 
 ```yaml
 ink.acc: pub
-ink.attr.type: Mapping:List
+ink.attr.type: Map+List
 ink.attr.p: [D, R]
 ```
 优先级列表、难度列表、时间列表。有序列表。角度也许是从这些有序或者无序集合中说的。
@@ -45,23 +45,48 @@ unique to-do list唯一代办优先级列表
 ## 重定向
 ```yaml
 ink.acc: pub
-ink.attr.type: Mapping:Redirect
+ink.attr.type: Map+Redirect
 ink.attr.p: [D, R]
 ```
 
 Wikipedia 的重定向功能本质上是一种特殊的页面管理机制，其主要目的是为了确保用户在访问具有多个名称或变体的相同主题时，能够被引导至正确的、统一的条目页面。
+
+### 术语
+
+```rs
+#! (ink pub (attr (type Term+[areas]) (p [D R])))
+```
+
+术语使得概念变得简单而不混淆，通用。指定语词的哪一个具体含义。如果对某个词赋予太多意义就很容易使沟通变得困难且难以理解
+
+term 和word 同一个词有不同的解释。属于我确实需要一类边表明它自己的身份多词汇的描述，先把词汇当成语言符号，然后在放到具体语境中。另外多学科使用同一词汇，但文件名只能有一个该如何处理？
+
+使用term标注具体领域（Specific areas），引用时表明领域和term，对于普通word，直接使用word即可。
+
+一个事物的确有多个类别、多方面的解释，比如某个词汇的多学科概念内涵。如何在一个描述中涵盖这些东西？
+
+#### 一词多义
+
+一词多义是指一个单词蕴含不同的含义。可能的情况有：
+
+英文缩写：MOC可能是知识管理中的Maps of content，也可能是乐高拼图中的My Own Creation.
+多个著名人物的名字相同：例如乔丹可能指美国的运动员，也可能是葡萄牙运动员，甚至是一家体育用品的企业。
+在传统的维基（wiki）系统中，会使用一个义项页面来解决这问题，但目前obsidian和RoamResearch好像都没有很好的解决方法。
+
+
+有些词语，只有在特定领域才有意义，当然其他领域也会有这个词，那么这个词也只有这个领域才能有意义。
 
 ## Graph
 
 索引的两种形式 Graph、Moc：要有实际的图，可以看见的的图，也要有承载内容的点，以及点上的边。mermaid，graphviz
 
 ```rs
-#! (ink pub (attr (type Mapping:Graph) (p [D R])))
+#! (ink pub (attr (type Map+Graph) (p [D R])))
 ```
 
 ```yaml
 ink.acc: pub
-ink.attr.type: Mapping:Graph
+ink.attr.type: Map+Graph
 ink.attr.p: [D, R]
 ```
 
@@ -92,12 +117,12 @@ style B fill:#F0FF;
 ## Moc
 
 ```rs
-#! (ink pub (attr (type Mapping:Moc) (p {D R})))
+#! (ink pub (attr (type Map+Moc) (p {D R})))
 ```
 
 ```yaml
 ink.acc: pub
-ink.attr.type: Mapping:Moc
+ink.attr.type: Map+Moc
 ink.attr.p: [D, R]
 ```
 
