--- a/KMS/孵化器/定义/003权限定义.md
+++ b/KMS/孵化器/定义/003权限定义.md
@@ -2,5 +2,9 @@
 
 > 清晰的使用关键字定义权限使查找和重用更有效率。不会存在歧义。
 
+```yaml
+ink.acc: pub
+```
+
 - `<pub>`：public，任何人都可阅读查看。
 - `<mut>`：mutable，可变的，可选择的。一个群体或某个人比如社团小组、当前面对的【不同的人】、家庭。包含相对私有，对于人类，没有绝对不可说的秘密，只是相对不可说。mut包括：priv仅属于自己，只能自己保护好，这也是在保护他人，因为有些事情和信息只能自己讲给自己，比如自己身上的组织不能给别人。会发生免疫反应的。有些东西是不适合拿去分享的。比如你的观点。这些例子举不胜数。人际关系曲线。
