--- a/KMS/孵化器/定义/020边-归于.md
+++ b/KMS/孵化器/定义/020边-归于.md
@@ -5,12 +5,12 @@
 ```
 
 ```yaml
-ink.acc: pub
 ink.edge.unto: [E, F]
 ```
 
-专门解决组合来源问题、多继承问题。
+先自成自立，在多样化。
 
+专门解决组合来源问题、多继承问题。
 
 ## 多继承
 
@@ -20,6 +20,4 @@ ink.edge.unto: [E, F]
 
 “菱形”问题——路径二义性
 
-> 单继承会比多继承更有优势，使用单继承时，多继承的特点可以由其他关系实现，比如多态。
-
-先自立，在多样。
+单继承会比多继承更有优势，使用单继承时，多继承的特点可以由其他关系实现，比如多态。
