--- a/KMS/孵化器/定义/000点-创造.md
+++ b/KMS/孵化器/定义/000点-创造.md
@@ -5,9 +5,9 @@
 ```
 
 ```yaml
-ink.acc: pub
-ink.type: create
-ink.p: [D, R]
+ink_acc: pub
+ink_type: create
+ink_p: [D, R]
 ```
 
 自然基础之上，通过人的创造实现。
