--- a/KMS/孵化器/定义/023边-时序.md
+++ b/KMS/孵化器/定义/023边-时序.md
@@ -8,7 +8,7 @@
 ```
 
 ```yaml
-ink.edge.seq+hist: [E, F]
+ink_edge_seq+hist: [E, F]
 ```
 
 hist:英文全称 history
@@ -24,7 +24,7 @@ hist:英文全称 history
 ```
 
 ```yaml
-ink.edge.seq+time: version
+ink_edge_seq+time: version
 ```
 
 一个元素的时间栈。类似GitHub的release和tag
