--- a/KMS/孵化器/定义/025边-算式.md
+++ b/KMS/孵化器/定义/025边-算式.md
@@ -8,7 +8,7 @@
 ```
 
 ```yaml
-ink.edge.sa.expr: T[i j]
+ink_edge_sa_expr: T[i j]
 ```
 
 类似数理化方程式，表述事物的总分变化。
@@ -32,7 +32,7 @@ add 、minus、times、divide
 ```
 
 ```yaml
-ink.edge.sa.expr: E
+ink_edge_sa_expr: E
 ```
 
 ==等效词汇==
