--- a/KMS/孵化器/定义/006系统架构.md
+++ b/KMS/孵化器/定义/006系统架构.md
@@ -14,6 +14,8 @@
 
 ○ 形象，象征体系|元素
 
+用好笔记软件在实用意义上等于：孤立点的组织与笔记的快速检索。知识的文字拷贝与知识组织结构（如何将孤立点集变成复杂且有序的结构体或非结构逻辑语义体）。协调统一有机的结构体。
+
 ## 从点到图
 
 孤立点，线性，关系表，树，图，语义网，超图
@@ -108,3 +110,4 @@
 化学分子式中：
 - 同素异形体：是相同元素组成,不同形态的单质.如碳元素就有金钢石、石墨、无定形碳等同素异形体.同素异形体由于结构不同,彼此间物理性质有差异
 - 同分异构体：在有机化学中，将分子式相同、结构不同的化合物互称同分异构体，也称为结构异构体。将具有相同分子式而具有不同结构的现象称为同分异构现象。
+
