--- a/KMS/孵化器/定义/022边-同义.md
+++ b/KMS/孵化器/定义/022边-同义.md
@@ -7,7 +7,7 @@
 
 ```yaml
 aliases: [E, F]
-ink_edge_alias: [E, F]
+ink-edge-alias: [E, F]
 ```
 
 假设元素等价于文件名加文件内容，那么，一词多义就相当于一个文件名对应多个文件内容，即一个文件名映射多个文件名。一义多词就相当于一个文件内容对应多个名字。
