--- a/KMS/孵化器/定义/023边-时序.md
+++ b/KMS/孵化器/定义/023边-时序.md
@@ -2,13 +2,13 @@
 在历史线性中，我能在某个时点元素标记的仅有：过去和现在。
 
 
-## 元素历史（标记过去）
+## 里程碑（标记过去）
 ```rs
 #! (ink pub (edge (seq+hist>>[E F])))
 ```
 
 ```yaml
-ink_edge_seq+hist: [E, F]
+ink-edge-seq_hist: [E, F]
 ```
 
 hist:英文全称 history
@@ -17,20 +17,22 @@ hist:英文全称 history
 
 过去是指，旧名字？
 
-## 里程碑（标记现在）（生长路径-时序）
+时间线笔记
+
+## 链路（标记现在）（生长路径-时序）
 
 ```rs
-#! (ink pub (edge (seq+time>>E)))
+#! (ink pub (edge (seq+next>>E)))
 ```
 
 ```yaml
-ink_edge_seq+time: version
+ink-edge-seq_next: [E]
 ```
-
-一个元素的时间栈。类似GitHub的release和tag
 
 链表式结构，当前标注下一个元素。
 
 发展（衍生，生长路径）生长路径，两个相互独立，但有明显逻辑时间先后关系的元素。
 
 生长路径只确定一个路径。多路径标记。
+
+这种类似链表的 ink 不适合手动标记，更适合程序去执行标记。
