--- a/KMS/孵化器/定义/024边-相关.md
+++ b/KMS/孵化器/定义/024边-相关.md
@@ -12,7 +12,7 @@
 ## 联想
 
 ```yaml
-ink_edge_sa_rel+assoc: [E, F]
+ink-edge-rel_assoc: [E, F]
 ```
 
 联想猜想。双向（暂定）
@@ -25,7 +25,7 @@ ink_edge_sa_rel+assoc: [E, F]
 ```
 
 ```yaml
-ink_edge_sa_rel+approx: [E, F]
+ink-edge-rel_approx: [E, F]
 ```
 
 this的近义词
@@ -42,7 +42,7 @@ opposite -> opp.
 ```
 
 ```yaml
-ink_edge_sa_rel+opp: E
+ink-edge-rel_opp: E
 ```
 
 
