--- a/KMS/孵化器/定义/041页面的逻辑结构.md
+++ b/KMS/孵化器/定义/041页面的逻辑结构.md
@@ -1,3 +1,5 @@
+页面的逻辑结构：常青笔记。
+
 贡献者-大脸猫皮皮：我个人觉得这些不适合我，我更关注于笔记的逻辑结构而不是物理结构，关注非结构化笔记而不是结构化笔记。这点可以参看关系型数据库和非关系型数据库之争。
 
 你关注的关系不仅在计算机科学里有，在工商管理领域也有，包括 kg 笔记法采用的四种笔记关系
