--- a/KMS/孵化器/定义/040页面的拓扑结构.md
+++ b/KMS/孵化器/定义/040页面的拓扑结构.md
@@ -48,6 +48,7 @@ ZK 树的高度，若用文件名，最大为 205。留出 25 位作为文件名
     - 定义：只有文档，没有文件夹的树形文件组织。
   - 标签树（Tags Tree）
     - 在tiddlywiki中，通过标签构成的文件树也是非常不错的选择。
+  -  文件系统和目录树
   - 联想
     - SuperMemo 内容树
     - SuperMemo 神经树。
