--- a/KMS/孵化器/定义/006系统架构.md
+++ b/KMS/孵化器/定义/006系统架构.md
@@ -16,6 +16,11 @@
 
 用好笔记软件在实用意义上等于：孤立点的组织与笔记的快速检索。知识的文字拷贝与知识组织结构（如何将孤立点集变成复杂且有序的结构体或非结构逻辑语义体）。协调统一有机的结构体。
 
+
+## 渐进存储
+
+笔记从雏形，到出现，到组织的每个阶段，即笔记的生长阶段。可以为不同阶段划分一个区域暂时存储。最后放到常青笔记树中，以及其它链接中。
+
 ## 从点到图
 
 孤立点，线性，关系表，树，图，语义网，超图
