--- a/KMS/孵化器/内容管理系统设计.md
+++ b/KMS/孵化器/内容管理系统设计.md
@@ -13,6 +13,21 @@
 索引和关键词表和
 先分成三个部分：相关内容树，索引重组，双链。
 
+系统包括：Ink，命名，参考，流程（Dailynote，Type（pages），ListTree）。
+
+目标不仅仅是为了使笔记有序生长，而是更进一步的去发现让更多未知的事物浮现在眼前。
+
+最小的文字结构组织语义单位是，页面下面的文本块。语句，是表示一个完整意思的一行代码。首先，相比语句更小的一种代码结构是，表达式。按照字面意思，可以分为两部分，表达和式。组合起来是，通过一种式子，表达相应的值。
+
+VBA 中，返回一个值的代码片段，称之为表达式。
+
+函数或者方法去操作数据结构，鼠标电脑去操作软件。人操作读写笔记
+
+变量、数据类型、运算符等概念，是 VBA 中"静态"的部分。相对的，程序结构是 VBA 中 "动态" 的部分。学习完程序结构，才能真正写出可以运行的 VBA 程序。我们学习 VBA 的最终目的是操纵 Excel，完成一些特定的目标。其中，操纵 Excel 就是通过 Excel VBA 对象完成的。
+
+将笔记视为静态部分，人类操作的动作方法视为动态部分。
+两者结合，才是完整的程序。
+
 
 
 ## ZK 嵌套列表（卡片内容树）
