--- a/KMS/孵化器/内容管理系统设计.md
+++ b/KMS/孵化器/内容管理系统设计.md
@@ -29,6 +29,15 @@ VBA 中，返回一个值的代码片段，称之为表达式。
 两者结合，才是完整的程序。
 
 
+视图表达方式：时间，类别，过滤器列表，tree，图。
+
+但最重要的是 pages 包含的 text。
+
+无论是怎样的笔记形式都会简化成数据表。
+
+树结构的节点要么是块级要么是页面级，块级就是 logseq，页面级就是思源文档树。
+
+列表中的元素可以用字段扩展后形成由一条条记录构成的矩阵。在某种意义上来说，记录和元素相似。
 
 ## ZK 嵌套列表（卡片内容树）
 
