--- a/KMS/孵化器/内容管理系统设计.md
+++ b/KMS/孵化器/内容管理系统设计.md
@@ -33,11 +33,13 @@ VBA 中，返回一个值的代码片段，称之为表达式。
 
 但最重要的是 pages 包含的 text。
 
-无论是怎样的笔记形式都会简化成数据表。
+无论是怎样的笔记形式都会简化成数据表 。
 
 树结构的节点要么是块级要么是页面级，块级就是 logseq，页面级就是思源文档树。
 
 列表中的元素可以用字段扩展后形成由一条条记录构成的矩阵。在某种意义上来说，记录和元素相似。
+
+使用 RDB 或者矩阵的方式或者太微条目的方式看待笔记也就是记录是一个明智之举。
 
 ## ZK 嵌套列表（卡片内容树）
 
