--- a/KMS/孵化器/定义/040页面的拓扑结构.md
+++ b/KMS/孵化器/定义/040页面的拓扑结构.md
@@ -1,6 +1,6 @@
 拓扑是一种把实体抽象成与其大小、形状无关的“点”，而把连接实体的线路抽象成“线”，进而以图的形式来表示这些点与线之间关系的方法
 
-知识组织的拓扑结构：==孤立点，线性，关系表，树，图，语义网，超图==。描述从简单的孤立笔记结构逐渐发展为最复杂的超图笔记结构的过程。
+知识组织的拓扑结构：==孤立点/集合，线性，矩阵，树，图，语义网，超图==。描述从简单的孤立笔记结构逐渐发展为最复杂的超图笔记结构的过程。
 
 # 知识组织的拓扑结构
 
@@ -18,11 +18,11 @@
 
 ## 线性
 
-线性：daily note（每日笔记，时间线），清单，无缩进列表，文字串，有顺序的任何东西，前序遍历的线索树（图书的目录树）
+线性：daily note（每日笔记，时间线），清单，无缩进列表，文字串，有顺序的任何东西，前序遍历的线索树（图书的目录树），List，Liner
 
 ## 矩阵
 
-二维关系表
+二维表，CDB，RDB，Excel
 
 ## 树
 
