--- a/KMS/孵化器/定义/041页面的逻辑结构.md
+++ b/KMS/孵化器/定义/041页面的逻辑结构.md
@@ -12,7 +12,17 @@
 
 关于逻辑结构，主要是什么，反正不是【线表树图】，很可能是逻辑学的知识。
 
-有个 关系型数据库和非关系型数据库之争 可以参考。
+RDB和 NoSQL之争，显然 RDB 胜，NoSQL 理念本身，是一个伪命题，它的核心在于摆脱 schema 的约束，但问题在于 schema-less 从来都不是目的，它只会是特定场景下的一个中间态。
+
+RDB vs NoSQL（KVS，MapReduce，GDB，CDB，VDB）
+
+收集≥存储≥查询
+
+在 schema-less 的数据堆里，做筛子，计算聚合都非常麻烦。道理很简单：前面的收集和储存，可以是无规则的，但是最后的查询必然是有规则的，没有什么数据库比 RDB 更懂规则表达了。所以我们真正需要的，不是一个 schema-less 的数据库，而是一个可以存储不规则数据的 RDB。
+
+
+
+图数据库≠图算法。
 
 
 丛书：高等学校信息管理学专业系列教材：知识管理学概论（修订版）、信息管理学基础（第三版）、信息描述、信息组织（第四版）
