--- a/KMS/孵化器/内容管理系统设计.md
+++ b/KMS/孵化器/内容管理系统设计.md
@@ -33,13 +33,15 @@ VBA 中，返回一个值的代码片段，称之为表达式。
 
 但最重要的是 pages 包含的 text。
 
-无论是怎样的笔记形式都会简化成数据表 。
+无论是怎样的笔记形式（从四种类别到图结构到 CDB）都会简化成数据表。
 
 树结构的节点要么是块级要么是页面级，块级就是 logseq，页面级就是思源文档树。
 
 列表中的元素可以用字段扩展后形成由一条条记录构成的矩阵。在某种意义上来说，记录和元素相似。
 
 使用 RDB 或者矩阵的方式或者太微条目的方式看待笔记也就是记录是一个明智之举。
+
+价值的信息，或者只能在不适当的位置堆放你的保存信息。整个归档分类过程不应该超过 1 分钟，如果达不到这个要求，就说明你的归档系统还需要改进。在以易检索格式进行归档时，如果花费的时间超过了一分钟，你就有可能抵触这个过程，最终把需要归档的资料随便堆放了事。这个系统除了要便捷，还应当让你感到有趣、好用、完整。否则，你会觉得归档这件事是个艰巨的任务，你就不会想去清空你的工作篮，甚至都不想看一眼堆积如山的文件或是电子邮件。但是别泄气: 一旦建立起了合适的归档系统并让它运作起来，你就不会再抗拒
 
 ## ZK 嵌套列表（卡片内容树）
 
