--- a/KMS/孵化器/内容管理系统设计.md
+++ b/KMS/孵化器/内容管理系统设计.md
@@ -43,7 +43,7 @@ VBA 中，返回一个值的代码片段，称之为表达式。
 
 价值的信息，或者只能在不适当的位置堆放你的保存信息。整个归档分类过程不应该超过 1 分钟，如果达不到这个要求，就说明你的归档系统还需要改进。在以易检索格式进行归档时，如果花费的时间超过了一分钟，你就有可能抵触这个过程，最终把需要归档的资料随便堆放了事。这个系统除了要便捷，还应当让你感到有趣、好用、完整。否则，你会觉得归档这件事是个艰巨的任务，你就不会想去清空你的工作篮，甚至都不想看一眼堆积如山的文件或是电子邮件。但是别泄气: 一旦建立起了合适的归档系统并让它运作起来，你就不会再抗拒
 
-千丝万缕终系于一身，一对多这种关系，对于图来说，是最容易操作和联想的表现方式。就是将图的节点放大到一页展示给人们看，然后将与其相连的边变成字段，分类排列好并展示。
+千丝万缕终系于一身，一对多这种关系，对于图来说，是最容易操作和联想的表现方式。就是将图的节点放大到一页展示给人们看，然后将与其相连的边变成字段，分类排列好并展示。这个也可以收集页面中的双联作为一对多结构中多部分的待选。多部分可以进行标记当前笔记和多部分中每一页之间的颜色关系。上下级，包含类似 thebrain，上下左右
 
 ## ZK 嵌套列表（卡片内容树）
 
