--- a/KMS/孵化器/内容管理系统设计.md
+++ b/KMS/孵化器/内容管理系统设计.md
@@ -45,6 +45,8 @@ VBA 中，返回一个值的代码片段，称之为表达式。
 
 千丝万缕终系于一身，一对多这种关系，对于图来说，是最容易操作和联想的表现方式。就是将图的节点放大到一页展示给人们看，然后将与其相连的边变成字段，分类排列好并展示。这个也可以收集页面中的双联作为一对多结构中多部分的待选。多部分可以进行标记当前笔记和多部分中每一页之间的颜色关系。上下级，包含类似 thebrain，上下左右
 
+双链笔记的一个意思是，笔记双方互相拥有彼此的链接。无论是入链还是出。其实就是在一个页面内加上其它页面的链接，就这么简单。
+
 ## ZK 嵌套列表（卡片内容树）
 
 嵌套列表结构。列表是开始，列表套列表。什么时候进入子列表呢？什么时候新建列表呢？
