更新树定义

--- a/KMS/孵化器/定义/040页面的拓扑结构.md
+++ b/KMS/孵化器/定义/040页面的拓扑结构.md
@@ -35,10 +35,11 @@ ZK 树的高度，若用文件名，最大为 205。留出 25 位作为文件名
 
 ### 表现形式
 
-- 文件树：集合树、文档树、标签树
-  - 集合树
+- 文件树：文件的树结构组织方式
+  - 目录树（集合树）
     - 定义：由文件夹组成的目录树。
     - 就像用格子组成的树，格子里面放文件或子文件夹
+    - 文件系统目录树
     - 目录树（文件系统）的组成：文件夹和文件
       - 目录树可看做嵌套笔记集合树
       - 每个文件夹都是一堆文件集合
@@ -48,7 +49,6 @@ ZK 树的高度，若用文件名，最大为 205。留出 25 位作为文件名
     - 定义：只有文档，没有文件夹的树形文件组织。
   - 标签树（Tags Tree）
     - 在tiddlywiki中，通过标签构成的文件树也是非常不错的选择。
-  -  文件系统和目录树
   - 联想
     - SuperMemo 内容树
     - SuperMemo 神经树。
