--- a/孵化器/日记/2025-02-10.md
+++ b/孵化器/日记/2025-02-10.md
@@ -89,39 +89,39 @@
 		- 主题索引卡
 			- 单独成卡。主题索引卡是完整而详细的，通常是一本书的目录或者是一篇文章的大纲
 			- 一种项目卡
-			- Zotero 的动态文件夹功能
+			- Zotero的动态文件夹功能
 		- 集合索引卡
 			- 集合索引卡没有形成完整清晰的大纲，只是相关话题或者内容就会整理到一起
 		- 单一索引
 			- 不单独成卡，而是写在已有的笔记卡之上。
 			- 单一索引，常常是卢曼写完笔记卡后产生的联想，然后随手对这张卡片进行关联。
-			- 相当于 Zotero 的关联文献功能
+			- 相当于Zotero的关联文献功能
 	- 关键词表
 		- 一个固定顺序的系统。
 		- 关键词表常常只列出一个关键词在整个系统里几个不同的位置。
-		- Rhetorik：21/3 a 1 p 5,1、21/3 a 1 pe 9 pa、7/25 g 17 d 7、7/9 d。
-- Zk 序列分支树（超子类分类关系，纵向）
+		- Rhetorik：21/3a1p5,1、21/3a1pe9pa、7/25g17d7、7/9d。
+- zk序列分支树（超子类分类关系，纵向）
 	- 每一条编码需与前一条编码有关联，要么是并列要么是延续。
-	- 位于卡片盒 2 中有一张关于“保密”的卡片，编码为 21/3 a 1 p 5 c 4 fb 1 a，21 就是第一级关键词，3 a 就是第二级，1 p 就是第三级，以此类推。
-	- 在卡片盒 2 中，卢曼使用以下四个原则进行编码：
+	- 位于卡片盒2中有一张关于“保密”的卡片，编码为21/3a1p5c4fb1a，21就是第一级关键词，3a就是第二级，1p就是第三级，以此类推。
+	- 在卡片盒2中，卢曼使用以下四个原则进行编码：
 		- 卡片须与前一条卡片有关联（上下，前后，有关联即可。）
 		- 不必牢记整个系统结构
 		- 话题的层级位置与理论上的重要性无关
 		- 话题设置没有上层和下层
 		- 最基本的特征是多输入和多输出的非线性控制系统，其特征是自适应控制和随机控制。
 	- 1/主题
-		- 1/1 是指一个全新的主题，从属于 1/主题。
-			- 1/1 a 从属于 1/主题，是 1/1 主题下内容和注释，包含卡片 1/1 的某个想法
-			- 1/1 b 延续了 1/1 a 内容，包含 1/1 a 的特定想法
-				- 1/1 b 1 延续了 1/1 b 内容，并包含 1/1 b 的某个想法
-					- 1/1 b 1 a 包含涉及卡 1/1 b 1
-					- 1/1 b 1 b 延续自卡 1/1 b 1 a，并包含 1/1 b 1 的每周想法
-				- 1/1 b 2 的笔记延续来自卡 1/1 b 1
-			- 1/2 a 从属于 1/主题，与 1/1 a 并列，同样是扩展 1/1 主题内容
-				- 因为/才是分割了上下层，才是分支，除了这个符合，剩下的都是序列，延续或并列。其实就是路径分割符。
+		- 1/1 是指一个全新的主题，从属于1/主题。
+			- 1/1a 从属于1/主题，是1/1主题下内容和注释，==包含==卡片1/1的某个想法
+			- 1/1b ==延续==了1/1a内容，==包含==1/1a的特定想法
+				- 1/1b1==延续==了1/1b内容，并==包含==1/1b的某个想法
+					- 1/1b1a==包含==涉及卡1/1b1
+					- 1/1b1b==延续==自卡1/1b1a，并==包含==1/1b1的每周想法
+				- 1/1b2的笔记==延续==来自卡1/1b1
+			- 1/2a 从属于1/主题，与1/1a==并列==，同样是==扩展==1/1主题内容
+				- **因为/才是分割了上下层，才是分支，除了这个符合，剩下的都是序列，延续或并列。其实就是路径分割符。**
 				- 这样大大的增加了一个区间内容的范围
-			- 为了与卡片盒 1 的编码区分开来，卡片盒 2 中的编码使用斜杠来分隔上下层级间，而非逗号，所有编码方式变为了[01/1 a]。
-	- 三层卡片编码：学科-核心模块-关键概念，（170,01,1 a）
+			- 为了与卡片盒1的编码区分开来，卡片盒2中的编码使用斜杠来分隔上下层级间，而非逗号，所有编码方式变为了[01/1a]。
+	- 三层卡片编码：学科-核心模块-关键概念，（170,01,1a）
 
 ---
 
