--- a/孵化器/内容管理系统设计.md
+++ b/孵化器/内容管理系统设计.md
@@ -49,6 +49,8 @@ VBA 中，返回一个值的代码片段，称之为表达式。
 
 双链笔记的一个意思是，笔记双方互相拥有彼此的链接。无论是入链还是出。其实就是在一个页面内加上其它页面的链接，就这么简单。
 
+当前关注的分区设计：当前关注的内容要从基本系统基本之上，建立一个分区，当不在关注后就取消关联，这相当于一个快捷方式的分区。
+
 ## ZK 嵌套列表（卡片内容树）
 
 嵌套列表结构。列表是开始，列表套列表。什么时候进入子列表呢？什么时候新建列表呢？
