--- a/孵化器/内容管理系统设计.md
+++ b/孵化器/内容管理系统设计.md
@@ -105,6 +105,8 @@ VBA 中，返回一个值的代码片段，称之为表达式。
 
 
 其实就是在树的叶结点上，结合相关性，放一棵新的话题相关的树。
+版本管理：
+为结点扩展一个顺序栈。在树上的每个结点上扩展一个顺序栈（时间栈）栈顶是最近的观点，栈是自己的观点的演化过程，想法的历史变化。这样树就有了厚度。
 
 ## 索引卡和关键词表
 
