--- a/孵化器/定义/000点-创造.md
+++ b/孵化器/定义/000点-创造.md
@@ -36,7 +36,7 @@ ink-p: [D, R]
 
 元素：不是边界，而是像细胞膜一样的张力弹性与柔韧。可以随意挤压变形，但是还是有一定的限度的。
 
-
+父子级别空间（目录）的相关但独立性。一个文件夹或者文件就是一个特殊层级上的空间，下属的子空间有自己独立的法则，他们之间的关联是通过相关性关联。这有点像 go 的名称空间。Go 名称空间只是一个字符串，名称空间下是一个完全自由的帝国，可以不同的法律不同的文化。而名称空间的字符串可以自己的语义，这些语义将这些包以某种相关性连接在一起。还有比如土地空间的例子，想象有一块地比如地球，这个地很大很大，可以随便建东西，其中你拿出一块地用于建学校、一块用于建政府、一块用于种菜，学校、政府、种菜是完全不同的系统，而且这些系统的下面的子系统可以完全独立有自己的系统。还有就是地球是一个空间，他下面有国家、州、县、地方。每个层级都有自己的规则，在自己空间内都有自己的逻辑系统。说白了，即是名字空间的嵌套，这个名字空间的法则，独立自主，内容随法则有序排列，然后就是欧这个概念之后，就直接嵌套就好了，俄罗斯套娃，但是每个娃都有自己的法则约束笔记。这就是文件夹即空间。
 
 ## 语义空间
 
